# sage-agent

./: .env.example  .gitignore  CHANGELOG.md  CODEOWNERS  Makefile  PLANS.md  README.md  config.toml  enhancement.md  logging.conf  pnpm-workspace.yaml  pyproject.toml
.docs/: agent-authoring.md  ci-headless.md  config-redesign.md  eval.md  memory.md  sandboxing.md  tools.md
.docs/adrs/: 001-pure-python.md  004-sqlite-memory-default.md  006-asyncio-parallelism.md  007-hybrid-architecture.md  008-mcp-support.md  009-markdown-agent-definitions.md  010-directory-subagents-and-delegate-tool.md  011-hook-event-system.md  012-event-telemetry-and-observability.md  013-tui-hardening-and-simplification-plan.md
.docs/plans/: 2026-03-07-google-login-provider-implementation-plan.md  2026-03-07-openai-chatgpt-auth-implementation-plan.md  2026-03-08-documentation-update.md
.github/: CODEOWNERS
.github/workflows/: release.yml
docs/: adr-0001-hook-observability-and-event-publishing.md  agent-authoring.md  memory.md  tools.md
docs/adrs/: 002-litellm-provider.md  003-yaml-config-format.md  004-sqlite-memory-default.md  005-tool-decorator-pattern.md  009-markdown-agent-definitions.md  template.md
docs/assessment/: gap-analysis-2026-02.md
docs/guides/: azure-ai-foundry-setup.md
docs/plans/: 2026-02-25-memory-documentation-design.md  2026-02-26-env-var-waterfall-design.md  2026-02-26-git-integration-design.md  2026-02-26-git-integration-plan.md  2026-03-01-lazy-skill-loading-design.md  2026-03-01-lazy-skill-loading-plan.md  2026-03-02-tui-enhancements-design.md  2026-03-02-tui-enhancements-plan.md  2026-03-02-tui-separation-design.md  2026-03-02-tui-separation-plan.md  2026-03-03-omo-phase1-foundation.md  2026-03-03-omo-phase2-async-and-roles.md  2026-03-03-omo-phase3-planning-pipeline.md  2026-03-03-omo-phase4-polish.md  2026-03-06-default-memory-config-design.md  2026-03-06-default-memory-config.md  2026-03-06-ollama-embedding-design.md  2026-03-06-ollama-embedding.md  2026-03-06-tui-bug-fix-design.md  2026-03-06-tui-bug-fix-plan.md  2026-03-06-tui-core-chat-loop.md  2026-03-06-tui-phase2-full-integration.md  2026-03-06-tui-ux-overhaul-design.md  2026-03-06-tui-ux-overhaul-plan.md  2026-03-06-tui-wiring-design.md  2026-03-09-complexity-scoring-design.md  2026-03-09-mcp-native-tools-redesign-design.md  2026-03-09-mcp-native-tools-redesign.md
eval-tests/: full.eval.yaml  security.eval.yaml  smoke.eval.yaml
eval-tests/fixtures/: buggy.py  pyproject.toml  sample.py
examples/: devtools.md  mcp-assistant.md  simple-assistant.md  simple_assistant.md
examples/category_routing_with_tool_restrictions/: config.toml  orchestrator.md  researcher.md  safe-coder.md
examples/claude_agent/: AGENTS.md
examples/custom_tools/: AGENTS.md  tool-agent.md  tools.py
examples/devtools_agent/: AGENTS.md
examples/github-actions/: sage-review.yml
examples/mcp_agent/: AGENTS.md
examples/memory_agent/: AGENTS.md  run.py
examples/orchestrated_agents/: conductor.md  config.toml  executor.md  planner.md
examples/parallel_agents/: AGENTS.md  orchestrator.md  researcher.md  summarizer.md
examples/permissions_agent/: AGENTS.md
examples/phase1_foundation/: AGENTS.md  README.md  config.toml  researcher.md
examples/safe_coder/: AGENTS.md  run_demo.py
examples/simple_agent/: AGENTS.md
examples/simple_assistant/: AGENTS.md
examples/skills_agent/: AGENTS.md  skills-agent.md
examples/skills_demo/: AGENTS.md  README.md  config.toml  run_demo.py
sage/: __init__.py  _compat.py  agent.py  central_config.py  complexity.py  config.py  events.py  exceptions.py  frontmatter.py  main_config.py  models.py  research.py  telemetry.py  tracing.py
sage/cli/: __init__.py  exit_codes.py  main.py  output.py  serve.py  tui.py
sage/context/: __init__.py  fallback_table.py  message_builder.py  token_budget.py
sage/coordination/: __init__.py  background.py  bus.py  cancellation.py  messages.py  session.py
sage/eval/: assertions.py  history.py  report.py  runner.py  suite.py
sage/git/: __init__.py  snapshot.py  tools.py  utils.py
sage/hooks/: __init__.py  base.py  registry.py
sage/identity/: __init__.py  aieos.py  models.py
sage/mcp/: __init__.py  client.py  server.py
sage/memory/: __init__.py  base.py  compaction.py  embedding.py  file_backend.py  registry.py  sqlite_backend.py
sage/orchestrator/: __init__.py  parallel.py  pipeline.py
sage/parsing/: json_repair.py  tool_calls.py
sage/permissions/: __init__.py  allow_all.py  base.py  interactive.py  policy.py
sage/planning/: __init__.py  conductor.py  notepad.py  review.py  state.py
sage/prompts/: __init__.py  dynamic_builder.py  overlays.py
sage/protocol/: __init__.py  bridge.py  dispatcher.py  framing.py  permissions.py  server.py
sage/providers/: __init__.py  base.py  litellm_provider.py
sage/skills/: __init__.py  loader.py
sage/tools/: __init__.py  _sandbox.py  _security.py  base.py  builtins.py  decorator.py  dispatcher.py  file_tools.py  git_tools.py  process_manager.py  process_tools.py  registry.py  web_tools.py
skills/create-sage-agent/: SKILL.md
skills_donotuse/evaluate-sage-agent/: SKILL.md
tests/: conftest.py  test_agent.py  test_agent_compaction_chain.py  test_agent_depth.py  test_agent_hooks.py  test_agent_memory_dedup.py  test_central_config.py  test_complexity.py  test_config.py  test_config_extensions.py  test_delegation_tools.py  test_event_bridge.py  test_events.py  test_frontmatter.py  test_identity.py  test_integration_examples.py  test_jsonrpc_permissions.py  test_main_config.py  test_models.py  test_persistent_session.py  test_phase1_foundation.py  test_protocol_dispatcher.py  test_research.py  test_security.py  test_telemetry_runtime.py  test_tracing.py
tui/: README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts  vitest.e2e.config.ts
(+273 files in other folders)
