[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[project]
name = "sage-agent"
version = "1.6.0-rc.1"
description = "Sage - Simplified AI agent definition and deployment via configuration"
authors = [
    {name = "Sage Choi", email = "iamsagebynature@gmail.com"}
]
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "litellm>=1.40",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "aiofiles>=24.0",
    "aiosqlite>=0.20",
    "click>=8.0",
    "numpy>=1.26",
    "mcp>=1.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "colorlog>=6.0",
    "markdownify>=0.14",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
vec = ["sqlite-vec>=0.1"]
tracing = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
]
eval = ["jsonschema>=4.0"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1.0",
    "coverage>=7.3.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
    "tomli>=2.0",
    "ty>=0.0.20",
]

[project.scripts]
sage = "sage.cli.main:cli"

[tool.uv.build-backend]
module-root = ""
module-name = "sage"

[tool.hatch.build.targets.wheel]
packages = ["sage"]


[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=sage --cov-report=term-missing  --cov-report=xml --import-mode=importlib"

[tool.coverage.run]
source = ["sage"]
omit = [
    "tests/*",
    "*/tests/*",
    "*/__pycache__/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ty.environment]
root = ["./sage"]

[tool.ty.src]
include = ["sage"]
exclude = ["tests"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
major_on_zero = true
upload_to_pypi = false
commit_message = "{version}\n\n[skip ci]"

[tool.semantic_release.branches.main]
match = "main"

[tool.semantic_release.branches.dev]
match = "dev"
prerelease = true
prerelease_token = "rc"
